Created 상단 고정레이어

--- a/sub.html
+++ b/sub.html
@@ -2020,6 +2020,30 @@
             </div>
         </header>
         <div style="padding: 3px 0 2px 0"></div>
+            <!-- 상단 고정 레이어 -->
+            <div class="fixed_top-wrap">
+                <div class="fixed_top-box">
+                    <!-- 고정 레이어 타이틀 -->
+                    <div class="title floatL">
+                        <ul>
+                            <li><a href="#" class="Ere_bo_title_ly">싱크 어게인 (리커버 블랙 에디션)</a> - 모르는 것을 아는 힘</li>
+                            <li>
+                                <span class="font_sz17 font_pink font_str">17,820</span>원 (10%, 1,980원 할인)
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- 고정 레이어 버튼 -->
+                    <div class="btnbox floatR">
+                        <div class="btn_sm_cart marginL4">
+                            <a href="#">장바구니 담기</a>
+                        </div>
+                        <div class="btn_sm_buyitnow">
+                            <a href="#">바로구매</a>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </div>
             <!-- 우측 상단 배너 -->
             <div class="goodsbn_wrap">
                 <div class="goodsbn_box">
