Updated for fixed-layer

--- a/sub.html
+++ b/sub.html
@@ -34,6 +34,7 @@
         <script src="./js/floatingBn.js"></script>
         <script src="./js/BookRotation.js"></script>
         <script src="./js/KakaoApi_sub.js"></script>
+        <script src="./js/ScrollLayer.js"></script>
     </head>
     <body>
         <header>
@@ -2685,7 +2686,7 @@
         </div>
         <div class="temp_H60"></div>
         <!-- 상품 정보 및 주제 섹션  -->
-        <div class="sub_wrap">
+        <div class="sub_wrap" id="fixed_layer_point">
             <div class="mid_LL">기본정보</div>
             <div class="mid_LS hidden">기본정보</div>
             <div class="mid_R">
