Update on process

--- a/sub.html
+++ b/sub.html
@@ -2027,7 +2027,7 @@
                     <!-- 고정 레이어 타이틀 -->
                     <div class="title floatL">
                         <ul>
-                            <li><a href="#" class="Ere_bo_title_ly">싱크 어게인 (리커버 블랙 에디션)</a> - 모르는 것을 아는 힘</li>
+                            <li><a href="#">싱크 어게인 (리커버 블랙 에디션)</a> - 모르는 것을 아는 힘</li>
                             <li>
                                 <span class="font_sz17 font_pink font_str">17,820</span>원 (10%, 1,980원 할인)
                             </li>
