Updated Jquery for scroll event

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <body>
         <header>
             <div class="header_wrap">
+                <!-- 상단 이벤트 베너 -->
                 <div
                     class="w_t_event roof_bnwrap"
                     style="background: rgb(124,91,244)"
