--- a/sub.html
+++ b/sub.html
@@ -39,6 +39,35 @@
     <body>
         <header>
             <div class="header_wrap">
+                <!-- 상단 이벤트 베너 -->
+                <div
+                    class="w_t_event roof_bnwrap"
+                    style="background: rgb(124,91,244)"
+                >
+                    <div class="RE_banner_new">
+                        <div class="left">
+                            <a href="#">
+                                <img
+                                    src="./img/top_header_L.jpg"
+                                    alt=""
+                                    border="0"
+                                />
+                            </a>
+                        </div>
+                        <div class="right">
+                            <a href="#">
+                                <img
+                                    src="./img/top_header_R.jpg"
+                                    alt=""
+                                    border="0"
+                                />
+                            </a>
+                        </div>
+                        <div class="close">
+                            <a href="#" alt="닫기">닫기</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="header_top">
                     <div class="inner">
                         <ul class="gnb" id="headerTop_gnb">
@@ -6954,7 +6983,7 @@
             <div class="last_wrap-buy">
                 <div class="last_Tbox">
                     <div class="last_title">
-                        이 상품을 구입하신 분들이 다음 상품도 구입하셨습니다.
+                        이 상품을 구입하신 분들이 다음 상품도 클릭하셨습니다.
                     </div>
                     <div class="last_more">
                         <div class="btn_check">
