Updated for book Rotation code

--- a/sub.html
+++ b/sub.html
@@ -2188,7 +2188,7 @@
                         </section>
                     </div>
                     <!-- 도서 내부 슬라이더 -->
-                    <!-- <div class="swiper_section" style="z-index: 2; opacity: 1;">
+                    <div class="swiper_section" style="z-index: 2; opacity: 1;">
                         <div class="swiper_wrapper" style="height: 747px; transform: translate3d(0px, 0px, 0px);">
                             <div class="swiper_item swiper_item-active" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_book-front.jpg" border="0" class="imgbox">
@@ -2221,7 +2221,7 @@
                                 <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-9.jpg" border="0" class="imgbox">
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="clear temp_H10"></div>
                 <!-- 미리보기 버튼 -->
