Update on process for bookSlick

--- a/sub.html
+++ b/sub.html
@@ -2175,7 +2175,6 @@
                     <!-- 도서 표지 회전 -->
                     <div
                         id="divFlipImg"
-                        style="text-align: center; z-index: 1; opacity: 1"
                     >
                         <section>
                             <div class="book">
@@ -2188,14 +2187,14 @@
                         </section>
                     </div>
                     <!-- 도서 내부 슬라이더 -->
-                    <div class="swiper_section" style="z-index: 2; opacity: 1;">
+                    <div class="swiper_section">
                         <div class="swiper_wrapper" style="height: 747px; transform: translate3d(0px, 0px, 0px);">
-                            <div class="swiper_item swiper_item-active" style="text-align: center; width: 502px;">
+                            <!-- <div class="swiper_item swiper_item-active" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_book-front.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item swiper_item-next" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_book-back.jpg" border="0" class="imgbox">
-                            </div>
+                            </div> -->
                             <div class="swiper_item" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-2.jpg" border="0" class="imgbox">
                             </div>
