Updataed Flipbook slide show

--- a/sub.html
+++ b/sub.html
@@ -2189,12 +2189,12 @@
                     <!-- 도서 내부 슬라이더 -->
                     <div class="swiper_section">
                         <div class="swiper_wrapper" style="height: 747px; transform: translate3d(0px, 0px, 0px);">
-                            <!-- <div class="swiper_item swiper_item-active" style="text-align: center; width: 502px;">
+                            <div class="swiper_item swiper_item-active" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_book-front.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item swiper_item-next" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_book-back.jpg" border="0" class="imgbox">
-                            </div> -->
+                            </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-2.jpg" border="0" class="imgbox">
                             </div>
@@ -2218,6 +2218,9 @@
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-9.jpg" border="0" class="imgbox">
+                                <div class="lastpic" id="lastpic">
+                                    <span>마지막 이미지<br>입니다.</span>
+                                </div>
                             </div>
                         </div>
                     </div>
