--- a/sub.html
+++ b/sub.html
@@ -2187,7 +2187,7 @@
                         </section>
                     </div>
                     <!-- 도서 내부 슬라이더 -->
-                    <div class="swiper_section">
+                    <div class="swiper_section hidden">
                         <div class="swiper_wrapper" style="height: 747px; transform: translate3d(0px, 0px, 0px);">
                             <div class="swiper_item swiper_item-active" style="text-align: center; width: 502px;">
                                 <img src="./img/sub_book-front.jpg" border="0" class="imgbox">
@@ -2196,28 +2196,28 @@
                                 <img src="./img/sub_book-back.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-2.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-2.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-3.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-3.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-4.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-4.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-5.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-5.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-6.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-6.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-7.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-7.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-8.jpg" border="0" class="imgbox">
+                                <img  src="./img/sub_Bcoverwrap-sliderItems/sliderItems-8.jpg" border="0" class="imgbox">
                             </div>
                             <div class="swiper_item" style="text-align: center; width: 502px;">
-                                <img src="./img/sub_Bcoverwrap-sliderItems/sliderItems-9.jpg" border="0" class="imgbox">
+                                <img class="temp_Bline1" src="./img/sub_Bcoverwrap-sliderItems/sliderItems-9.jpg" border="0" class="imgbox">
                                 <div class="lastpic" id="lastpic">
                                     <span>마지막 이미지<br>입니다.</span>
                                 </div>
