Update on process for book fliping

--- a/sub.html
+++ b/sub.html
@@ -2177,7 +2177,7 @@
                         id="divFlipImg"
                     >
                         <section>
-                            <div class="book">
+                            <div class="book" style="transform-origin: top !important;">
                                 <img
                                     class="imgbox"
                                     src="./img/sub_book-front.jpg"
