Updated close banner event

--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                                     </tbody>
                                 </table>
                                 <div style="width: 1020; text-align: right; margin: 15px 0 0 0;">
-                                    <a href="./sub.html"><img src="https://image.aladin.co.kr/img/header/2011/btn_close.gif" alt="닫기"></a>
+                                    <a href="./sub.html"><img src="https://image.aladin.co.kr/img/header/2011/btn_close.gif" alt="닫기" class="menu_close"></a>
                                 </div>
                             </div>
                         </li>
