--- a/sub.html
+++ b/sub.html
@@ -1954,6 +1954,7 @@
                                         ><img
                                             src="https://image.aladin.co.kr/img/header/2011/btn_close.gif"
                                             alt="닫기"
+                                            class="menu_close"
                                     /></a>
                                 </div>
                             </div>
