Updated logo link

--- a/index.html
+++ b/index.html
@@ -573,7 +573,9 @@
                 <div class="header_middle">
                     <div class="header_middle-logo">
                         <h1>
-                            <a href="./sub.html" id="logoBtn" title="첫화면으로 가기">알라딘</a>
+                            <a href="./sub.html" id="logoBtn" title="첫화면으로 가기" style="cursor: pointer;">알라딘
+                                <img src="../img/aladin_logo_new.gif" alt="알라딘">
+                            </a>
                         </h1>
                     </div>
                     <div class="search_field">
