--- a/sub.html
+++ b/sub.html
@@ -1107,8 +1107,10 @@
                 <div class="header_middle">
                     <div class="header_middle-logo">
                         <h1>
-                            <a href="#" id="logoBtn" title="첫화면으로 가기"
-                                >알라딘</a
+                            <a href="./index.html" id="logoBtn" title="첫화면으로 가기" style="cursor: pointer;"
+                                >알라딘
+                                <img src="../img/aladin_logo_new.gif" alt="알라딘">
+                                </a
                             >
                         </h1>
                     </div>
