Updated SLick for tobe section

--- a/index.html
+++ b/index.html
@@ -2453,7 +2453,6 @@
                                 </div>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
                 <div class="white_circle_next"></div>
@@ -2564,6 +2563,61 @@
                                 <div class="tb_text">
                                     <div class="title">파김치의 쭈글쭈글한 일기장</div>
                                     <div class="author">허안나</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="./sub.html" target="_blank">
+                                <div class="thum">
+                                    <img src="https://image.aladin.co.kr/Tobe/Thumbs/63NA32/AA62N9/638265234079753578_0.jpg?RS=195x175&CS=196x175&RT=1&AR=0" alt="">
+                                </div>
+                                <div class="tb_text">
+                                    <div class="title">오늘 아무것도 안 씀</div>
+                                    <div class="author">금정연</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="./sub.html" target="_blank">
+                                <div class="thum">
+                                    <img src="https://image.aladin.co.kr/Tobe/Series/36XA47/Y7YE3Y/638258829134503805_0.png?RS=195x175&CS=196x175&RT=1&AR=0" alt="">
+                                </div>
+                                <div class="tb_text">
+                                    <div class="title">백합의 우울</div>
+                                    <div class="author">하시아</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="./sub.html" target="_blank">
+                                <div class="thum">
+                                    <img src="https://image.aladin.co.kr/Tobe/Series/7SN2NA/SS37N4/638116285504618114_0.png?RS=195x175&CS=196x175&RT=1&AR=0" alt="">
+                                </div>
+                                <div class="tb_text">
+                                    <div class="title">근원? 근심!</div>
+                                    <div class="author">차연조</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="./sub.html" target="_blank">
+                                <div class="thum">
+                                    <img src="https://image.aladin.co.kr/Tobe/Series/Y4E76S/2SYS4X/638241766716149991_0.jpg?RS=195x175&CS=196x175&RT=1&AR=0" alt="">
+                                </div>
+                                <div class="tb_text">
+                                    <div class="title">Re:boot 오직 너를 위한 시간</div>
+                                    <div class="author">사화</div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="swiper_item">
+                            <a href="./sub.html" target="_blank">
+                                <div class="thum">
+                                    <img src="https://image.aladin.co.kr/Tobe/Series/E37ESA/99EEYN/638228835363571409_0.jpg?RS=195x175&CS=196x175&RT=1&AR=0" alt="">
+                                </div>
+                                <div class="tb_text">
+                                    <div class="title">카르마의 그리스</div>
+                                    <div class="author">파도에</div>
                                 </div>
                             </a>
                         </div>
