--- a/index.html
+++ b/index.html
@@ -1976,6 +1976,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper_item">
                                 <div class="cover">
                                     <a href="./sub.html">
                                         <img src="https://image.aladin.co.kr/product/31914/91/cover200/k092833847_1.jpg?RS=170" alt="왜 폭력을 쓰면 안 되나요?">
@@ -2093,7 +2094,7 @@
                                         <a href="./sub.html">집착의 법칙 </a>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div> 
                         </div>
                     </div>
                     <div class="white_circle_next"></div>
