--- a/sub.html
+++ b/sub.html
@@ -8,8 +8,7 @@
             type="image/x-icon"
             rel="shortcut icon"
         />
-        <title>지희알라딘</title>
-        <!-- <link rel="stylesheet" href="./css/main.css" type="text/css"> -->
+        <title>알라딘: 싱크 어게인 (리커버 블랙 에디션)</title>
         <link rel="stylesheet" href="./css/sub.css" type="text/css" />
         <link rel="stylesheet" href="./css/common.css" type="text/css" />
         <link
