--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <script src="./js/floatingBn.js"></script>
     </head>
     <body>
+        <!-- 헤더시작 -->
         <header>
             <div class="header_wrap">
                 <!-- 상단 이벤트 베너 -->
@@ -863,18 +864,21 @@
             </div>
         </header>
         <div class="welcome_wrap">
+            <!-- 위로가기 버튼 -->
             <button type="button" class="go_top btnScrollToTop">위로가기</button>
             <div class="floating_bn_box" id="quickMenuLayer">
-                <!-- bn   =>    banner -->
+                <!-- bn는 banner를 의미 / 좌측 상단 배너-->
                 <div class="left_bn">
                     <img src="./img/floating_bn_left.jpg" alt="">
                 </div>
+                <!-- 와이드 배너 -->
                 <div class="wide_bn_tab">
                     <a href="./sub.html"><img src="https://image.aladin.co.kr/img/bn/book/2023/03/230814_august2_layer_tab.gif" alt=""></a>
                     <a href="./sub.html"><img src="https://image.aladin.co.kr/img/bn/book/2023/03/230825_study_layer_tab.gif" alt=""></a>
                     <a href="./sub.html"><img src="https://image.aladin.co.kr/img/bn/book/2023/03/230801_univevt_layer_tab2.gif" alt=""></a>
                     <a href="./sub.html"><img src="https://image.aladin.co.kr/img/bn/book/2023/01/230220_haruki_layer_tab.gif" alt=""></a>
                 </div>
+                <!-- 우측 배너 -->
                 <div class="right_bn">
                     <a href="./sub.html" class="pink_bn">알라딘 us</a>
                     <a href="./sub.html" class="pink_bn">도서관 사서</a>
@@ -2791,6 +2795,7 @@
                 <div class="white_circle_prev"></div>
             </div>
         </div>
+        <!-- 푸터시작 -->
         <footer>
                 <div class="footer_menu">
                     <ul>
