Fixed logo path

--- a/sub.html
+++ b/sub.html
@@ -67,6 +67,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- 헤더 맨 위 메뉴 -->
                 <div class="header_top">
                     <div class="inner">
                         <ul class="gnb" id="headerTop_gnb">
@@ -1106,9 +1107,10 @@
                 <div class="header_middle">
                     <div class="header_middle-logo">
                         <h1>
+                            <!-- 홈 화면 바로가기 로고 -->
                             <a href="./index.html" id="logoBtn" title="첫화면으로 가기" style="cursor: pointer;"
                                 >알라딘
-                                <img src="../img/aladin_logo_new.gif" alt="알라딘">
+                                <img src="./img/aladin_logo_new.gif" alt="알라딘">
                                 </a
                             >
                         </h1>
