--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- 헤더 맨 위 메뉴 -->
                 <div class="header_top">
                     <div class="inner">
                         <ul class="gnb" id="headerTop_gnb">
@@ -572,10 +573,11 @@
                     </div>
                 </div>
                 <div class="header_middle">
+                    <!-- 홈 화면 바로가기 로고 -->
                     <div class="header_middle-logo">
                         <h1>
                             <a href="./sub.html" id="logoBtn" title="첫화면으로 가기" style="cursor: pointer;">알라딘
-                                <img src="../img/aladin_logo_new.gif" alt="알라딘">
+                                <img src="./img/aladin_logo_new.gif" alt="알라딘">
                             </a>
                         </h1>
                     </div>
